# pybpcs

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  testing.ipynb
pybpcs/: __init__.py  bpc.py  data.py
pybpcs/csv/: tennis_agresti.csv
pybpcs/stan/: bt.hpp  test.hpp
tests/: test_bpc_input_errors.py  test_bt.py  testdata.py
