[metadata]
name = pybpcs-davidissamattos
version = 0.0.1
author = David Issa Mattos
author_email = issamattos.david@gmail.com
description = A Python package for Bayesian Paired Comparison models using STAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidissamattos/pybpcs
project_urls =
    Bug Tracker = https://github.com/davidissamattos/pybpcs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pybpcs
packages = find:
python_requires = >=3.8.12

[options.packages.find]
where = pybpcs

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests